Closed Bug 422185 Opened 18 years ago Closed 18 years ago

jsgc.obj : error LNK2001: unresolved external symbol "int __cdecl posix_memalign(void * *,unsigned int,unsigned int)" (?posix_memalign@@YAHPAPAXII@Z)

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta5

People

(Reporter: benjamin, Assigned: benjamin)

Details

Attachments

(1 file)

jsgc.obj : error LNK2001: unresolved external symbol "int __cdecl posix_memalign(void * *,unsigned int,unsigned int)" (?posix_memalign@@YAHPAPAXII@Z) On mozilla-central with jemalloc. This is because it should be extern "C"... patch forthcoming.
Comment on attachment 308691 [details] [diff] [review] add JS_{BEGIN,END}_EXTERN_C around posix_memalign decl, rev. 1 Trivially safe for 1.9. Thought I saw this patch in another bug already... /be
Attachment #308691 - Flags: review?(brendan)
Attachment #308691 - Flags: review+
Attachment #308691 - Flags: approval1.9?
That was _InterlockedCompareExchange, unless there's a patch floating about I didn't know about.
Comment on attachment 308691 [details] [diff] [review] add JS_{BEGIN,END}_EXTERN_C around posix_memalign decl, rev. 1 a1.9+=damons
Attachment #308691 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in js/src/jsgc.c; /cvsroot/mozilla/js/src/jsgc.c,v <-- jsgc.c new revision: 3.289; previous revision: 3.288 done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
Flags: in-testsuite-
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: