Bug 422185 - "jsgc.obj : error LNK2001: unresolved external symbol "int __cdecl posix_memalign(void * *,unsigned int,unsigned int)" (?posix_memalign@@YAHPAPAXII@Z)" (posix_memalign needs to be extern "C" when compiling with a C++ compiler) [p=benjamin@smedbergs.us (Benjamin Smedberg [bsmedberg]) r=brendan a1.9=damons]