js/src/jsgc.c
@@ -92,8 +92,10 @@
  * declared on Windows.
  */
 #if HAS_POSIX_MEMALIGN && MOZ_MEMORY_WINDOWS
+JS_BEGIN_EXTERN_C
 extern int
 posix_memalign(void **memptr, size_t alignment, size_t size);
+JS_END_EXTERN_C
 #endif
 
 /*
